fixed text overflow to selects

--- a/src/scss/layout/_header.sass
+++ b/src/scss/layout/_header.sass
@@ -68,7 +68,7 @@
 			padding: em-calc(20) 0
 
 			&:first-of-type
-				border-right: $super-ligh-gray solid em-calc(2)
+				border-right: $super-ligh-gray solid em-calc(1.5)
 
 	+bp(min, em-calc(920))
 		margin-left: em-calc(15)
@@ -177,12 +177,12 @@
 			color: $strong-gray
 			margin: 0 !important
 			padding: em-calc(20) 0
-			border-bottom: $super-ligh-gray solid em-calc(2)
+			border-bottom: $super-ligh-gray solid em-calc(1.5)
 
 			&:hover
 				color: #fff !important
 				background-color: $ligh-blue !important
 
 			&:first-of-type
-				border-top: $super-ligh-gray solid em-calc(2)
+				border-top: $super-ligh-gray solid em-calc(1.5)
 
