--- a/src/scss/layout/_home.sass
+++ b/src/scss/layout/_home.sass
@@ -362,7 +362,12 @@ a
 							color: $font-color-base
 
 	.text-hide, .mobile-text-hide		
-		display: none				
+		display: none
+
+	#mobile-select-specialty option
+		overflow: hidden
+		white-space: nowrap
+		text-overflow: ellipsis				
 
 .map-wrapper
 	height: em-calc(615)
